links to social media

--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: /images/sitelogo.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: laurinec.peter@gmail.com
+  facebook: peter.laurinec
   flickr:
   github: PetoLau
   instagram:
-  linkedin:
+  linkedin: peter-laurinec-590a8a90
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
