--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: /images/sitelogo.png
 footer-links:
   dribbble:
   email: laurinec.peter@gmail.com
-  facebook: peter.laurinec
+  facebook: 
   flickr:
   github: PetoLau
   instagram:
