--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook: 
   flickr:
   github: PetoLau
-  instagram:
+  instagram: peterlauri
   linkedin: peter-laurinec-590a8a90
   pinterest:
   rss: PetoLau # just type anything here for a working RSS icon
