New links and added twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
   linkedin: peter-laurinec-590a8a90
   pinterest:
   rss: PetoLau # just type anything here for a working RSS icon
-  twitter: 
+  twitter: petolauri
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
