--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Peter Laurinec
+name: Data_Analysis<-R by Peter Laurinec
 
 # Short bio or description (displayed in the header)
-description: Time series data mining in R. Bratislava, Slovakia.
+description: Data mining blog about time series analysis, forecasting and clustering in R. Bratislava, Slovakia.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/sitelogo.png
